--- a/InOutLog.Desk/app.config
+++ b/InOutLog.Desk/app.config
@@ -1,3 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/></startup></configuration>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
+  </startup>
+  <appSettings>
+    <clear/>
+    <add key="username" value="ivan.kopcanski"/>
+    <add key="apiUrl" value="http://inoutlog.openode.io"/>
+    <add key="refreshInterval" value="30"/>
+  </appSettings>
+</configuration>
