--- a/InOutLog.Droid/Assets/app.config
+++ b/InOutLog.Droid/Assets/app.config
@@ -8,4 +8,10 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <appSettings>
+    <clear/>
+    <add key="username" value="ivan.kopcanski"/>
+    <add key="apiUrl" value="http://inoutlog.openode.io"/>
+    <add key="refreshInterval" value="30"/>
+  </appSettings>
 </configuration>
