--- a/InOutLog.Desk/InOutLog.Desk.csproj
+++ b/InOutLog.Desk/InOutLog.Desk.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Converters\ClockConverter.cs" />
     <Compile Include="Converters\TimeSpanConverter.cs" />
     <Compile Include="Converters\VisibilityInverter.cs" />
+    <Compile Include="Externals\Config.cs" />
     <Compile Include="Externals\Dialog.cs" />
     <Compile Include="Externals\SafeUI.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
