--- a/InOutLog.Droid/packages.config
+++ b/InOutLog.Droid/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="monoandroid60" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="monoandroid60" />
+  <package id="PCLAppConfig" version="0.3.2" targetFramework="monoandroid80" />
   <package id="PCLStorage" version="1.0.2" targetFramework="monoandroid60" />
 </packages>
