--- a/InOutLog.Droid/packages.config
+++ b/InOutLog.Droid/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="monoandroid60" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="monoandroid71" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="monoandroid71" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="monoandroid71" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="monoandroid60" />
-  <package id="PCLAppConfig" version="0.3.2" targetFramework="monoandroid80" />
   <package id="PCLStorage" version="1.0.2" targetFramework="monoandroid60" />
 </packages>
