--- a/InOutLog.Desk/app.config
+++ b/InOutLog.Desk/app.config
@@ -5,7 +5,7 @@
   </startup>
   <appSettings>
     <clear />
-    <add key="username" value="ivan.kopcanski" />
+    <add key="authUrl" value="https://inoutlog.auth0.com/api/v2" />
     <add key="apiUrl" value="http://inoutlog.openode.io" />
     <add key="refreshInterval" value="30" />
   </appSettings>
