--- a/InOutLog.Core/InOutLog.Core.csproj
+++ b/InOutLog.Core/InOutLog.Core.csproj
@@ -55,7 +55,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Timer.cs" />
     <Compile Include="ViewModels\AuthViewModel.cs" />
-    <Compile Include="ViewModels\ScreenViewModel.cs" />
+    <Compile Include="ViewModels\ScreenManager.cs" />
     <Compile Include="ViewModels\InOutWatcher\InOutWatcher.cs" />
     <Compile Include="ViewModels\InOutWatcher\WatcherStates\IWatcherState.cs" />
     <Compile Include="ViewModels\InOutWatcher\WatcherStates\WatcherData.cs" />
