--- a/InOutLog.Core/InOutLog.Core.csproj
+++ b/InOutLog.Core/InOutLog.Core.csproj
@@ -46,14 +46,13 @@
     <Compile Include="OAuth\IAuthManager.cs" />
     <Compile Include="Persisters\ILogPersister.cs" />
     <Compile Include="Persisters\LocalPersister.cs" />
-    <Compile Include="Persisters\PersisterFactory.cs" />
     <Compile Include="Persisters\RemotePersister.cs" />
     <Compile Include="Persisters\[Entry].cs" />
     <Compile Include="Persisters\[Session].cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Timer.cs" />
     <Compile Include="ViewModels\AuthViewModel.cs" />
-    <Compile Include="ViewModels\ScreenManager.cs" />
+    <Compile Include="ViewModels\ViewManager.cs" />
     <Compile Include="ViewModels\InOutWatcher\InOutWatcher.cs" />
     <Compile Include="ViewModels\InOutWatcher\WatcherStates\IWatcherState.cs" />
     <Compile Include="ViewModels\InOutWatcher\WatcherStates\WatcherData.cs" />
@@ -68,7 +67,9 @@
     <Compile Include="[mvvm]\ViewModelBase.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <None Include="app.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
