--- a/InOutLog.Desk/app.config
+++ b/InOutLog.Desk/app.config
@@ -1,19 +1,21 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
   </startup>
   <appSettings>
-    <clear />
-    <add key="authUrl" value="https://inoutlog.auth0.com/api/v2" />
-    <add key="apiUrl" value="http://inoutlog.openode.io" />
-    <add key="refreshInterval" value="30" />
+    <clear/>
+    <add key="authDomain" value="inoutlog.auth0.com"/>
+    <add key="authClientId" value="0wHjlNC-Csn7M5vdf-j4djW_0r-V9aJM"/>
+    <!--<add key="apiUrl" value="http://inoutlog.openode.io"/>-->
+    <add key="apiUrl" value="http://localhost:3000"/>
+    <add key="refreshInterval" value="30"/>
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="System.Net.Http.Primitives" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.2.29.0" newVersion="4.2.29.0" />
+        <assemblyIdentity name="System.Net.Http.Primitives" publicKeyToken="b03f5f7f11d50a3a" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-4.2.29.0" newVersion="4.2.29.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
