Access token protection is added to API calls

--- a/InOutLog.Desk/app.config
+++ b/InOutLog.Desk/app.config
@@ -7,6 +7,7 @@
     <clear/>
     <add key="authDomain" value="inoutlog.auth0.com"/>
     <add key="authClientId" value="0wHjlNC-Csn7M5vdf-j4djW_0r-V9aJM"/>
+    <add key="authAudience" value="https://inoutlog.auth0.com/api/v2/"/>
     <!--<add key="apiUrl" value="http://inoutlog.openode.io"/>-->
     <add key="apiUrl" value="http://localhost:3000"/>
     <add key="refreshInterval" value="30"/>
