--- a/InOutLog.Core/packages.config
+++ b/InOutLog.Core/packages.config
@@ -5,4 +5,5 @@
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="PCLStorage" version="1.0.2" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="Xam.Plugins.Settings" version="3.1.1" targetFramework="portable45-net45+win8+wp8+wpa81" />
 </packages>
