--- a/InOutLog.Desk/app.config
+++ b/InOutLog.Desk/app.config
@@ -1,22 +1,26 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
   <appSettings>
-    <clear/>
-    <add key="authDomain" value="inoutlog.auth0.com"/>
-    <add key="authClientId" value="0wHjlNC-Csn7M5vdf-j4djW_0r-V9aJM"/>
-    <add key="authAudience" value="https://inoutlog.auth0.com/api/v2/"/>
-    <add key="apiUrl" value="http://inoutlog.openode.io"/>
+    <clear />
+    <add key="authDomain" value="inoutlog.auth0.com" />
+    <add key="authClientId" value="0wHjlNC-Csn7M5vdf-j4djW_0r-V9aJM" />
+    <add key="authAudience" value="https://inoutlog.auth0.com/api/v2/" />
+    <add key="apiUrl" value="http://inoutlog.openode.io" />
     <!--<add key="apiUrl" value="http://localhost:3000"/>-->
-    <add key="refreshInterval" value="30"/>
+    <add key="refreshInterval" value="30" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="System.Net.Http.Primitives" publicKeyToken="b03f5f7f11d50a3a" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-4.2.29.0" newVersion="4.2.29.0"/>
+        <assemblyIdentity name="System.Net.Http.Primitives" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.29.0" newVersion="4.2.29.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
