--- a/InOutLog.Desk/packages.config
+++ b/InOutLog.Desk/packages.config
@@ -12,6 +12,7 @@
   <package id="Microsoft.IdentityModel.Tokens" version="5.1.3" targetFramework="net452" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net45" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net452" />
+  <package id="MicrosoftExpressionInteractions" version="3.0.40218.0" targetFramework="net452" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
   <package id="PCLStorage" version="1.0.2" targetFramework="net452" />
@@ -45,6 +46,8 @@
   <package id="System.Threading" version="4.3.0" targetFramework="net452" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net452" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net452" />
+  <package id="System.Windows.Interactivity.WPF" version="2.0.20525" targetFramework="net452" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net452" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net452" />
+  <package id="Xam.Plugins.Settings" version="3.1.1" targetFramework="net452" />
 </packages>
