--- a/InOutLog.Droid/packages.config
+++ b/InOutLog.Droid/packages.config
@@ -63,4 +63,5 @@
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="monoandroid71" />
+  <package id="Xam.Plugins.Settings" version="3.1.1" targetFramework="monoandroid44" />
 </packages>
