IDialog is no more externaly dependent on Activity - current Activity can be reached through CrossCurrentActivity.Current.Activity global property. Bug fixed: after suspending/resuming the application stopped working

--- a/InOutLog.Droid/InOutLog.Droid.csproj
+++ b/InOutLog.Droid/InOutLog.Droid.csproj
@@ -102,6 +102,9 @@
       <HintPath>..\packages\PCLStorage.1.0.2\lib\monoandroid\PCLStorage.Abstractions.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Plugin.CurrentActivity, Version=1.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Plugin.CurrentActivity.1.0.1\lib\MonoAndroid10\Plugin.CurrentActivity.dll</HintPath>
+    </Reference>
     <Reference Include="Plugin.Settings, Version=3.1.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Xam.Plugins.Settings.3.1.1\lib\MonoAndroid10\Plugin.Settings.dll</HintPath>
     </Reference>
@@ -125,7 +128,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="App.cs" />
     <Compile Include="Converters\ClockConverter.cs" />
     <Compile Include="Converters\TimeSpanConverter.cs" />
     <Compile Include="Externals\AuthManager.cs" />
@@ -136,6 +138,7 @@
       <SubType>Code</SubType>
       <DependentUpon>MainActivity.cs</DependentUpon>
     </Compile>
+    <Compile Include="MainApp.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
