--- a/InOutLog.Droid/packages.config
+++ b/InOutLog.Droid/packages.config
@@ -18,6 +18,7 @@
   <package id="NETStandard.Library" version="1.6.1" targetFramework="monoandroid71" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="monoandroid71" />
   <package id="PCLStorage" version="1.0.2" targetFramework="monoandroid60" />
+  <package id="Plugin.CurrentActivity" version="1.0.1" targetFramework="monoandroid44" />
   <package id="System.AppContext" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Collections" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="monoandroid71" />
